@@ -247,11 +247,12 @@
  '(mmm-code-submode-face ((t (:background "darkgreen"))))
  '(mmm-default-submode-face ((t (:background "black"))))
  '(mode-line ((t (:background "lightgrey" :foreground "black" :box (:line-width 1 :style released-button)))))
- '(mode-line-inactive ((default (:inherit mode-line)) (((class color) (min-colors 88) (background dark)) nil)))
+ '(mode-line-inactive ((t (:inherit mode-line :background "grey30" :foreground "grey80" :box (:line-width -1 :color "grey40") :weight light))))
  '(muse-header-1 ((t (:foreground "green" :weight bold))))
  '(muse-header-2 ((t (:foreground "lightblue" :weight bold))))
  '(muse-header-3 ((t (:foreground "grey" :weight bold))))
  '(muse-header-4 ((t (:weight bold))))
+ '(org-hide ((((background dark)) (:foreground "darkslategrey"))))
  '(planner-note-headline-face ((t (:foreground "turquoise" :weight bold))))
  '(region ((t (:background "#3b6363"))))
  '(show-paren-match ((t (:background "black" :foreground "red" :weight bold))))
