@@ -1,3 +1,15 @@
+2006-05-29  Yann Hodique  <Yann.Hodique@lifl.fr>
+
+	* dotemacs.el (org-config): load by default
+	trigger (org-agenda-list) at startup
+
+	* config/planner-config.el (kbd): move keybindings to config file
+
+	* config/org-config.el: initial checkin.
+
+	* config/calendar-config.el: disable those useless holidays
+	(diary-cyclic-bounded): small variation of diary-cyclic
+
 2006-05-05  Yann Hodique  <Yann.Hodique@lifl.fr>
 
 	* perso/tempo-c++.el (c-mode-common-hook): use common hook
